--- a/config/packages/ambient_station.yaml
+++ b/config/packages/ambient_station.yaml
@@ -8,46 +8,46 @@ ambient_station:
 
 homeassistant:
   customize:
-    sensor.my_weather_station_hourly_rain_rate:
+    sensor.mpws2000_hourly_rain_rate:
       friendly_name: Hourly rain
       icon: mdi:weather-pouring
 
-    sensor.my_weather_station_daily_rain:
+    sensor.mpws2000_daily_rain:
       friendly_name: Daily rain
       icon: mdi:weather-pouring
 
-    sensor.my_weather_station_weekly_rain:
+    sensor.mpws2000_weekly_rain:
       friendly_name: Weekly rain
       icon: mdi:weather-pouring
 
-    sensor.my_weather_station_monthly_rain:
+    sensor.mpws2000_monthly_rain:
       friendly_name: Monthly rain
       icon: mdi:weather-pouring
 
-    sensor.my_weather_station_yearly_rain:
+    sensor.mpws2000_yearly_rain:
       friendly_name: Yearly rain
       icon: mdi:weather-pouring
 
-    sensor.my_weather_station_wind_speed:
+    sensor.mpws2000_wind_speed:
       friendly_name: Wind speed
       icon: mdi:weather-windy
 
-    sensor.my_weather_station_wind_gust:
+    sensor.mpws2000_wind_gust:
       friendly_name: Wind gust
       icon: mdi:weather-windy
 
-    sensor.my_weather_station_inside_temp:
+    sensor.mpws2000_inside_temp:
       friendly_name: Indoor temp
       icon: mdi:home-outline
 
-    sensor.my_weather_station_dew_point:
+    sensor.mpws2000_dew_point:
       friendly_name: Dew point
       icon: mdi:water-percent
 
-    sensor.my_weather_station_max_gust:
+    sensor.mpws2000_max_gust:
       friendly_name: Max gust
       icon: mdi:weather-windy
 
-    sensor.my_weather_station_wind_dir:
+    sensor.mpws2000_wind_dir:
       friendly_name: Wind direction
       icon: mdi:compass-outline
