--- a/config/packages/ambient_station.yaml
+++ b/config/packages/ambient_station.yaml
@@ -2,10 +2,6 @@
 # This integration uses the Ambient Weather API to retrieve
 # data from our weather station.
 #
-ambient_station:
-  api_key: !secret ambient_api_key
-  app_key: !secret ambient_app_key_2
-
 homeassistant:
   customize:
     sensor.mpws2000_hourly_rain_rate:
@@ -35,6 +31,10 @@ homeassistant:
     sensor.mpws2000_wind_gust:
       friendly_name: Wind gust
       icon: mdi:weather-windy
+
+    sensor.mpws2000_temp:
+      friendly_name: Temperature
+      icon: mdi:thermometer
 
     sensor.mpws2000_inside_temp:
       friendly_name: Indoor temp
