--- a/config/packages/remote_homeassistant.yaml
+++ b/config/packages/remote_homeassistant.yaml
@@ -34,6 +34,7 @@ remote_homeassistant:
           - light
           - sensor
           - switch
+          - cover
       subscribe_events:
         - state_changed
         - service_registered
