--- a/config/scripts/movie.yaml
+++ b/config/scripts/movie.yaml
@@ -22,9 +22,9 @@ watch_movie_on:
       entity_id: automation.turn_on_basement_stairs_light_on_motion
   - service: remote.turn_on
     target:
-      entity_id: remote.basement_harmony
+      entity_id: remote.harmony_hub
     data:
-      activity: "Watch Roku"
+      activity: Watch Roku
   mode: single
   icon: mdi:movie-open-play
 
@@ -48,9 +48,9 @@ watch_movie_off:
       entity_id: automation.turn_on_basement_stairs_light_on_motion
   - service: remote.turn_on
     target:
-      entity_id: remote.basement_harmony
+      entity_id: remote.harmony_hub
     data:
-      activity: "PowerOff"
+      activity: PowerOff
   mode: single
   icon: mdi:movie-open-play
 
