Update xmas tree switch name

--- a/config/dashboards/ui-minimal/views/main.yaml
+++ b/config/dashboards/ui-minimal/views/main.yaml
@@ -72,7 +72,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: light.christmas_tree_lights
+            entity: switch.christmas_tree
             hold_action:
               action: more-info
             icon: 'mdi:string-lights'
