--- a/config/entities/sensors/bandwidth.yaml
+++ b/config/entities/sensors/bandwidth.yaml
@@ -5,6 +5,7 @@
   entity_id: sensor.mp_sp7_rx
   name: MP SP7 RX stats
   sampling_size: 1000
+  state_characteristic: mean
   max_age:
     minutes: 1
 
@@ -12,6 +13,7 @@
   entity_id: sensor.mp_sp7_tx
   name: MP SP7 TX stats
   sampling_size: 1000
+  state_characteristic: mean
   max_age:
     minutes: 1
 
@@ -19,6 +21,7 @@
   entity_id: sensor.mp_iphone_rx
   name: MP iPhone RX stats
   sampling_size: 1000
+  state_characteristic: mean
   max_age:
     minutes: 1
 
@@ -26,6 +29,7 @@
   entity_id: sensor.mp_iphone_tx
   name: MP iPhone TX stats
   sampling_size: 1000
+  state_characteristic: mean
   max_age:
     minutes: 1
 
