--- a/config/scripts/movie.yaml
+++ b/config/scripts/movie.yaml
@@ -1,30 +1,36 @@
 watch_movie_on:
   alias: Start watching a movie
   sequence:
-  - service: cover.close_cover
-    target:
-      entity_id: cover.basement_blinds
-  - service: light.turn_on
-    target:
-      entity_id: light.zw_basement_desk_lamp_color
-    data:
-      brightness: 255
-  - service: light.turn_on
-    target:
-      entity_id: light.zw_basement_counter_lights
-    data:
-      brightness: 30
-  - service: light.turn_off
-    target:
-      entity_id: light.zw_basement_stair_lights
-  - service: automation.turn_off
-    target:
-      entity_id: automation.turn_on_basement_stairs_light_on_motion
-  - service: remote.turn_on
-    target:
-      entity_id: remote.harmony_hub
-    data:
-      activity: Watch Roku
+    - service: remote.turn_on
+      target:
+        entity_id: remote.harmony_hub
+      data:
+        activity: Watch Roku
+    - choose:
+        - conditions:
+            - condition: template
+              value_template: "{{ is_state('sun.sun', 'above_horizon') }}"
+          sequence:
+          - service: cover.close_cover
+            target:
+              entity_id: cover.basement_blinds
+      default:
+        - service: light.turn_on
+          target:
+            entity_id: light.zw_basement_desk_lamp_color
+          data:
+            brightness: 255
+        - service: light.turn_on
+          target:
+            entity_id: light.zw_basement_counter_lights
+          data:
+            brightness: 30
+        - service: light.turn_off
+          target:
+            entity_id: light.zw_basement_stair_lights
+        - service: automation.turn_off
+          target:
+            entity_id: automation.turn_on_basement_stairs_light_on_motion
   mode: single
   icon: mdi:movie-open-play
 
