--- a/config/automations/aqara_basement_office.yaml
+++ b/config/automations/aqara_basement_office.yaml
@@ -1,4 +1,4 @@
-# Handles the three click types for the spare room button
+# Handles the three click types for the basement office button
 # (single click, double click, hold)
 - id: aqara_button_basement_office
   alias: Aqara wireless remote basement office
