--- a/config/packages/influxdb.yaml
+++ b/config/packages/influxdb.yaml
@@ -1,8 +1,4 @@
-# I store a lot of sensor data into InfluxDB, which allows me to query
-# a longer history with ease. It also allows nice graphing with Grafana.
-#
-# I followed Phil Hawthorne's instructions for setting up both in Docker.
-#
+# Influxdb is set up using Phil Hawthorne's instructions for setting up both in Docker.
 # https://philhawthorne.com/getting-started-with-grafana-influxdb-for-home-assistant/
 #
 influxdb:
